--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/magazine
 spring.datasource.username=root
-spring.datasource.password=2975356
+spring.datasource.password=root
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.session.jdbc.initialize-schema=always
